syntax = "proto3";

package kyve.pool.v1beta1;
import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/pool/types";

// PoolStatus ...
enum PoolStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // POOL_STATUS_UNSPECIFIED ...
  POOL_STATUS_UNSPECIFIED = 0;
  // POOL_STATUS_ACTIVE ...
  POOL_STATUS_ACTIVE = 1;
  // POOL_STATUS_PAUSED ...
  POOL_STATUS_PAUSED = 2;
  // POOL_STATUS_NO_FUNDS ...
  POOL_STATUS_NO_FUNDS = 3;
  // POOL_STATUS_NOT_ENOUGH_VALIDATORS ...
  POOL_STATUS_NOT_ENOUGH_VALIDATORS = 4;
  // POOL_STATUS_NOT_ENOUGH_STAKE ...
  POOL_STATUS_NOT_ENOUGH_STAKE = 5;
  // POOL_STATUS_UPGRADING ...
  POOL_STATUS_UPGRADING = 6;
}

// Protocol ...
message Protocol {
  // version ...
  string version = 1;
  // binaries ...
  string binaries = 2;
  // last_upgrade ...
  uint64 last_upgrade = 3;
}

// Upgrade ...
message UpgradePlan {
  // version ...
  string version = 1;
  // binaries ...
  string binaries = 2;
  // scheduled_at ...
  uint64 scheduled_at = 3;
  // duration ...
  uint64 duration = 4;
}

// Funder ...
message Funder {
  // fund_id ...
  uint64 pool_id = 1;
  // account ...
  string account = 2;
  // amount ...
  uint64 amount = 3;
}

// Pool ...
message Pool {
  // id ...
  uint64 id = 1;
  // creator ...
  string creator = 2;
  // name ...
  string name = 3;
  // runtime ...
  string runtime = 4;
  // logo ...
  string logo = 5;
  // config ...
  string config = 6;

  // upload_interval ...
  uint64 upload_interval = 7;
  // operating_cost ...
  uint64 operating_cost = 8;
  // paused ...
  bool paused = 9;
  // max_bundle_size ...
  uint64 max_bundle_size = 10;

  // protocol ...
  Protocol protocol = 11;
  // upgrade_plan ...
  UpgradePlan upgrade_plan = 12;

  // start_key ...
  string start_key = 13;
  // current_key ...
  string current_key = 14;
  // current_value ...
  string current_value = 15;

  uint64 min_stake = 16;
  // status ...
  PoolStatus status = 17;

//  // current_height ...
//  uint64 current_height = 8;
//  // total_bytes ...
//  uint64 total_bytes = 9;
//  // total_bundles ...
//  uint64 total_bundles = 10;
//  // total_bundle_rewards ...
//  uint64 total_bundle_rewards = 11;


  // TODO maybe refactor funders to use sorted list, KV-binary tree, or go heap, for better performance
  // TODO maybe dont update all funders after payout, but store amount to subtract and only update,
  // TODO when funders list changes (e.g funding, defunding, lowest funder getting kicked out)
  // funders ...
  repeated Funder funders = 18;
  // total_funds ...
  uint64 total_funds = 20;

  // TODO stakers + total_delegation
//  // stakers ...
//  repeated string stakers = 19;
//  // lowest_staker ...
//  string lowest_staker = 20;
//  // total_stake ...
//  uint64 total_stake = 21;
//  // total_delegation ...
//  uint64 total_delegation = 22;
//  // inactive_stakers ...
//  repeated string inactive_stakers = 30;
//  // total_inactive_stake ...
//  uint64 total_inactive_stake = 31;
//  // min_stake ...

  // bundle_proposal ...
  // TODO BUNDLES MODULE
//  kyve.registry.v1beta1.BundleProposal bundle_proposal = 23;


}